@@ -1,0 +1,125 @@
+<?xml version="1.0"?>
+<!--
+   Copyright (C) 2014  Stanislav Sinyagin
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+
+  Stanislav Sinyagin <ssinyagin@yahoo.com>
+
+-->
+
+<!--
+  IP-MIB traffic statistics
+-->
+
+<configuration>
+
+<definitions>
+  <!-- IP-MIB:ipIfStatsTable  -->
+  <def name="ipIfStatsHCInOctets"           value="1.3.6.1.2.1.4.31.3.1.6" />
+  <def name="ipIfStatsHCOutOctets"          value="1.3.6.1.2.1.4.31.3.1.33" />
+</definitions>
+
+<datasources>
+
+  <!-- Parameters for interfaces parent subtree -->
+  <template name="rfc4293-ipmib-subtree">
+    <param name="has-overview-shortcuts" value="yes"/>
+    <param name="overview-shortcuts" value="traffic"/>
+    
+    <param name="overview-subleave-name-traffic" value="InOut_bps"/>
+    <param name="overview-shortcut-text-traffic"
+           value="All traffic"/>
+    <param name="overview-shortcut-title-traffic"
+           value="Show traffic for all interfaces on one page"/>
+    <param name="overview-page-title-traffic"
+           value="Input/Output Graphs"/>
+           
+    <param name="data-file"
+           value="%system-id%_%interface-nick%_%ipmib-ipver-name%_ip-mib.rrd" />
+  </template>
+
+
+  <!-- =====  IP-MIB traffic counters ===== -->
+  
+  <template name="ipifstats-hcoctets">
+    <leaf name="Bytes_In">
+      <param name="snmp-object"
+             value="$ipIfStatsHCInOctets.%ipmib-ipver%.%ifindex-map%" />
+      <param name="snmp-object-type"  value="COUNTER64" />
+      <param name="rrd-ds"            value="InOctets" />
+      <param name="rrd-create-dstype" value="COUNTER" />
+      <param name="ext-dstype"        value="COUNTER64" />
+      <param name="rrd-create-max"    value="1e15"/>
+      <param name="ext-counter-max"   value="1e15"/>
+      <param name="comment"  value="Input byte counter for the interface" />
+      <param name="graph-legend"      value="%ipmib-ipver-nameuc% bytes in" />
+      <param name="vertical-label"    value="Bps" />
+      <param name="graph-lower-limit" value="0" />
+      <param name="precedence"        value="990" />
+      <param name="monitor-action-target"  value="InOut_bps"/>
+      <param name="nodeid"            value="%nodeid-interface%//inbytes"/>
+    </leaf>
+
+    <leaf name="Bytes_Out">
+      <param name="snmp-object"
+             value="$ipIfStatsHCOutOctets.%ipmib-ipver%.%ifindex-map%" />
+      <param name="snmp-object-type"  value="COUNTER64" />
+      <param name="rrd-ds"            value="OutOctets" />
+      <param name="rrd-create-dstype" value="COUNTER" />
+      <param name="ext-dstype"        value="COUNTER64" />
+      <param name="rrd-create-max"    value="1e15"/>
+      <param name="ext-counter-max"   value="1e15"/>
+      <param name="comment" value="Output byte counter for the interface" />
+      <param name="graph-legend"      value="%ipmib-ipver-nameuc% bytes out" />
+      <param name="vertical-label"    value="Bps" />
+      <param name="graph-lower-limit" value="0" />
+      <param name="precedence"        value="980" />
+      <param name="monitor-action-target"  value="InOut_bps"/>
+      <param name="nodeid"            value="%nodeid-interface%//outbytes"/>
+    </leaf>
+
+    <leaf name="InOut_bps">
+      <param name="comment"
+             value="Input and Output %ipmib-ipver-nameuc% bps graphs" />
+      <param name="vertical-label"   value="bps" />
+      <param name="graph-lower-limit" value="0" />
+      <param name="rrd-hwpredict"    value="disabled" />
+      <param name="precedence"       value="1000" />
+      <param name="nodeid"           value="%nodeid-interface%//inoutbit"/>
+      <param name="ds-type"          value="rrd-multigraph" />
+      <param name="ds-names"         value="in,out" />
+
+      <param name="ds-expr-in"       value="{Bytes_In},8,*" />
+      <param name="graph-legend-in"  value="Bits per second in" />
+      <param name="line-style-in"    value="##BpsIn" />
+      <param name="line-color-in"    value="##BpsIn" />
+      <param name="line-order-in"    value="1" />
+      <param name="maxline-style-in" value="##BpsInMax" />
+      <param name="maxline-color-in" value="##BpsInMax" />
+
+      <param name="ds-expr-out"      value="{Bytes_Out},8,*" />
+      <param name="graph-legend-out" value="Bits per second out" />
+      <param name="line-style-out"   value="##BpsOut" />
+      <param name="line-color-out"   value="##BpsOut" />
+      <param name="line-order-out"   value="2" />
+      <param name="maxline-style-out" value="##BpsOutMax" />
+      <param name="maxline-color-out" value="##BpsOutMax" />
+    </leaf>
+  </template>
+
+</datasources>
+
+</configuration>
