@@ -1,3 +1,8 @@
+2014-04-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/RFC4293_IP_MIB.pm: new discovery
+	module for IPv4/IPv6 traffic stats
+
 2014-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/CiscoGeneric.pm (discover):
